Dual Kontsevich proof and canonical Vassiliev invariants

--- a/lie_theory_and_jacobi_diagrams.tex
+++ b/lie_theory_and_jacobi_diagrams.tex
@@ -1,8 +1,8 @@
 \chapter{Lie theory and Jacobi diagrams}
 \label{ch:lie-theory-and-jacobi-diagrams}
 
-\section{First subsection}
+\section{Jacobi diagrams, STU and IHX}
 
-\section{Second section}
+\section{Lie algebra weight systems}
 
-\section{Third subsection}
+\section{Jacobi diagrams as a universal enveloping algebra}
