--- a/references.bib
+++ b/references.bib
@@ -191,3 +191,14 @@
 	Eprint = {math/0501040},
 	Eprinttype = {arXiv},
 }
+@article{on-the-melvin-morton-rozansky-conjecture,
+	author = {Bar-Natan, Dror and Garoufalidis, Stavros},
+	title = {On the Melvin--Morton--Rozansky conjecture},
+	journal = {Inventiones mathematicae},
+	year = {1996},
+	month = {May},
+	day = {01},
+	volume = {125},
+	number = {1},
+	pages = {103-133},
+}
