--- a/vassiliev_invariants_and_chord_diagrams.tex
+++ b/vassiliev_invariants_and_chord_diagrams.tex
@@ -689,7 +689,7 @@ We didn't prove that the product and coproduct in \(\mathcal{V}\) respect the as
 		\right)
 		\overset{\mu}{\longrightarrow} c,
 	\]
-	where \(\mu: \mathbb{R} \otimes \mathbb{R}\) is multiplication.
+	where \(\mu: \mathbb{R} \otimes \mathbb{R} \to \mathbb{R}\) is multiplication.
 
 	As it turns out, this theorem is pretty useless in the multivariable calculus case. The filtration on \(\mathbb{R}\) coming from being the derivative of some function evaluated at some point is trivial, and so every \(c \in \mathbb{R}\) comes from some such \(f\) and \(g\), and it's easy to construct such \(f\) and \(g\).
 
