Scaffold Lie chapter and add coprod on A

--- a/lie_theory_and_jacobi_diagrams.tex
+++ b/lie_theory_and_jacobi_diagrams.tex
@@ -1,6 +1,23 @@
 \chapter{Lie theory and Jacobi diagrams}
 \label{ch:lie-theory-and-jacobi-diagrams}
 
+
+
+\begin{mdframed}
+	Scaffold of chapter:
+
+	-- That 4T looks like STU/IHX. Hint at Lie algebra relations.
+
+	-- The isomorphism from Chord diagrams to Jacobi diagrams with proof.
+
+	-- Bar-Natan construction: Lie algebra \(\to\) some weight systems. i.e. you get a quotient(?) of \(\mathcal{A}\) from this?
+
+	-- Some examples of this, and some talking about diagrams not detected by Lie algebras (who?), even Lie Superalgebras (Vogel). Perhaps also some dimensions of spaces.
+
+	-- Go through classical Hinnich-Vaintrob.
+
+\end{mdframed}
+
 \section{Jacobi diagrams, STU and IHX}
 
 \section{Lie algebra weight systems}
