Define primitive chord diagrams

--- a/references.bib
+++ b/references.bib
@@ -202,3 +202,16 @@
 	number = {1},
 	pages = {103-133},
 }
+@article{on-the-structure-of-hopf-algebras,
+	author = {John W. Milnor and John C. Moore},
+	journal = {Annals of Mathematics},
+	number = {2},
+	pages = {211--264},
+	publisher = {[Annals of Mathematics, Trustees of Princeton University on
+	             Behalf of the Annals of Mathematics, Mathematics Department,
+	             Princeton University]},
+	title = {On the Structure of Hopf Algebras},
+	urldate = {2025-10-28},
+	volume = {81},
+	year = {1965},
+}
