--- a/vassiliev_invariants_and_chord_diagrams.tex
+++ b/vassiliev_invariants_and_chord_diagrams.tex
@@ -838,7 +838,7 @@ Just as there is a connected sum operation in \(\mathcal{A}\) reminiscent to tha
 \end{proposition}
 
 \begin{proof}
-	We check those things we need to check: That the coproduct factors through the quoitents, that it's graded, and that the compatibility condition holds.
+	We need to check: that the coproduct factors through the quoitents, that the coproduct respects the grading, and that the compatibility condition holds.
 
 	That \(\Delta\) factors through \ref{eq:co1T} is easy: an isolated chord in \(A\) remains isolated and appears in one cofactor of every term of \(\Delta(A)\).
 	% TODO: Swap the notation so the 4Ts and 1Ts with stars are in the first chapter and not in the rest.
@@ -863,7 +863,7 @@ Just as there is a connected sum operation in \(\mathcal{A}\) reminiscent to tha
 		\item \(s\) was also partitioned into the \(C_{i}\)'s, and the relation remains a \ref{eq:co4T}, or
 		\item \(s\) was partitioned into the \(D_{i}\)'s, and so \(C_{1} = C_{2}\) and \(C_{3} = C_{4}\),
 	\end{itemize}
-	but either way that term of the coproduct is killed.
+	and in either case, that term of the coproduct is killed.
 
 	The coproduct clearly satisfies
 	\[\Delta(\mathcal{A}_{m}) \subset \bigoplus_{i + j = m} \mathcal{A}_{i} \otimes \mathcal{A}_{j} = (\mathcal{A} \otimes \mathcal{A})_{m},\]
@@ -871,10 +871,38 @@ Just as there is a connected sum operation in \(\mathcal{A}\) reminiscent to tha
 
 	The compatibility condition holds. If \(A\) has chord set \(S\) and \(B\) has chord set \(T\), then
 	\begin{align*}
-		\Delta(A \hash B)
-		& = \sum_{J \subset S \sqcup T} (A \hash B)_{J} \otimes (A \hash B)_{\overline{J}}
+		\Delta(A) \hash^{\otimes 2} \Delta(B)
+		& = \left(\sum_{J' \subset S} A_{J'} \otimes A_{\overline{J'}} \right) \hash^{\otimes 2} \left(\sum_{J'' \subset T} B_{J''} \otimes B_{\overline{J''}} \right) \\
+		& = \sum_{J \subset S \sqcup T} (A \hash B)_{J} \otimes (A \hash B)_{\overline{J}} \\
+		& = \Delta(A \hash B).
 	\end{align*}
 \end{proof}
+
+\begin{definition}
+	The \textbf{primitive elements}, \(\mathcal{P}(A)\) of a coalgebra \(A\) are the elements satisfying
+	\[\Delta(x) = 1 \otimes x + x \otimes 1.\]
+\end{definition}
+
+% TODO: Define connected.
+The algebra \(\mathcal{A}\) is a connected, graded algebra of finite type. Such a structure is sometimes called a \textbf{Hopf algebra}. Furthermore, it is cocommutative and commutative, and for such algebras there is an important classical theorem about the structures of such objects due to Milnor and Moore \cite{on-the-structure-of-hopf-algebras}.
+
+\begin{theorem}
+	The bialgebra \(\mathcal{A}\) is canonically isomorphic to the algebra of polynomials in its primitive elements,
+	\[\mathcal{A} \cong S(\mathcal{P}(\mathcal{A})),\]
+	where \(S\) denotes the symmetric algebra.
+\end{theorem}
+
+\begin{proof}
+	\begin{mdframed}
+		The proof in \cite{introduction-to-vassiliev-invariants} is readable, but missing crucial details, and containing a typo. Furthermore I cannot find it anywhere else. If there is time, I want to find out if it works and include it. Perhaps compare to the original source.
+	\end{mdframed}
+\end{proof}
+
+\begin{remark}
+	In modernity, Hopf algebras are defined as not-necessarily-graded bialgebras with an additional operation called the antipode. This definition will not be so useful for our purposes, but note that connected, graded algebras of finite type can always be given an antipode, and so are examples of what are today called Hopf algebras.
+\end{remark}
+
+The primitive elements of \(\mathcal{A}\) will come in handy in Chapter \ref{ch:lie-theory-and-jacobi-diagrams} when we make connections to Lie algebras.
 
 \begin{proposition}
 	\begin{mdframed}
