--- a/references.bib
+++ b/references.bib
@@ -215,3 +215,16 @@
 	volume = {81},
 	year = {1965},
 }
+@article{noncommutative-chern-weil-theory-and-the-combinatorics-of-wheeling,
+	author = {Andrew Kricker},
+	title = {{Noncommutative Chern-Weil theory and the combinatorics of
+	         wheeling}},
+	volume = {157},
+	journal = {Duke Mathematical Journal},
+	number = {2},
+	publisher = {Duke University Press},
+	pages = {223 -- 281},
+	year = {2011},
+	doi = {10.1215/00127094-2011-005},
+	URL = {https://doi.org/10.1215/00127094-2011-005},
+}
