--- a/setup.tex
+++ b/setup.tex
@@ -20,7 +20,8 @@
 \usepackage{titling}
 \usepackage{titlesec}
 
-\titlespacing*{\chapter}{0pt}{-4.3pc plus -15pt}{0pt}
+% TODO: Ensure starred and non-starred chapter titles are aligned or otherwise satisfying result
+\titlespacing*{\chapter}{0pt}{0pt plus -15pt}{0pt}
 
 \titleformat{\chapter}[display]
 {\normalfont\filcenter}
